--- a/proyectoUNP/Web.config
+++ b/proyectoUNP/Web.config
@@ -66,8 +66,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MiBaseDeDatos"
-         connectionString="Server=nombre_servidor;Database=nombre_base_datos;User Id=usuario;Password=contraseña;"
+    <add name="Sist_ControlActivos2"
+         connectionString="Server=ACERNITRO;Database=Sist_ControlActivos2;User Id=sa;Password=marlon123;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
